# FFmpeg_Player

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mdplayer/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mdplayer/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
